bdr.BDR2.scala.error
Erreur de compilation :
BDR2:6: error: ')' expected but '}' found.
while (estSurMessage()) {if (litMessage()==}
                                           ^BDR2:16: error: Unmatched closing brace '}' ignored here
	}
        ^